meta dan favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/preline@2.5.0/dist/preline.min.js"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,container-queries"></script>
+    <title>Wawanzone Web Developer</title>
     <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
+    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
 </head>
 
 <body class="antialiased bg-gradient-to-b from-slate-100 min-h-screen">
@@ -105,7 +111,7 @@
                     functional frontends <br> <br> also capturing — every beautiful moment with story
                     <div class="mt-4">
                         <a class="px-8 py-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-full border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
-                            href="hermawan.szz@gmail.com">Let's Collaborate</a>
+                            href="mailto:hermawan.szz@gmail.com">Let's Collaborate</a>
                     </div>
                 </div>
             </div>
