--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="manifest" href="img/site.webmanifest">
 </head>
 
-<body class="antialiased bg-gradient-to-b from-slate-100 min-h-screen">
+<body class="antialiased bg-gradient-to-b from-slate-100 to-white via-white/0 min-h-screen">
     <!-- ========== HEADER ========== -->
     <header class="border-gray-200 flex text-sm flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav
@@ -494,7 +494,7 @@
 
     <!-- Footer -->
     <div
-        class=" bg-gradient-to-t from-white z-10 mx-auto fixed left-0 right-0 bottom-0 w-full ">
+        class=" bg-gradient-to-t from-white mx-auto w-full ">
         <div class=" max-w-6xl flex md:items-center justify-between md:gap-3 mx-auto px-4 sm:px-6  py-5">
             <!-- Logo w/ Collapse Button -->
         <div class="flex items-center justify-between  gap-4">
