--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <link rel="manifest" href="img/site.webmanifest">
 </head>
 
-<body class="antialiased bg-gradient-to-b from-slate-100 to-white via-white/0 min-h-screen">
+<body class="antialiased bg-gradient-to-b from-slate-100 to-white/10 via-white/0 h-screen flex flex-col justify-between">
     <!-- ========== HEADER ========== -->
     <header class="border-gray-200 flex text-sm flex-wrap md:justify-start md:flex-nowrap z-50 w-full">
         <nav
-            class="relative max-w-6xl border-b w-full md:flex md:items-center justify-between md:gap-3 mx-auto px-4 sm:px-6  py-5">
+            class="relative max-w-6xl border-b w-full md:flex md:items-center justify-between md:gap-3 mx-auto px-4 sm:px-6  py-3">
             <!-- Logo w/ Collapse Button -->
             <div class="flex items-center justify-between  gap-4">
                 <div class="flex gap-4 items-center">
                     <a class=" font-semibold text-base text-black focus:outline-none focus:opacity-80 flex gap-4 items-center" href="#"
                         aria-label="Brand"><img src="img/wawanzone.png" class="size-12" alt=""> wawanzone</a>
-                    <div>Yogyakarta, Indonesia</div>
+                    <div class="max-md:hidden">Yogyakarta, Indonesia</div>
                 </div>
 
                 <!-- Collapse Button -->
@@ -93,11 +93,10 @@
             <!-- End Collapse -->
         </nav>
     </header>
-
     <!-- Content-->
     <div class="items-center">
-        <div class="max-w-6xl px-4 sm:px-6  mx-auto ">
-            <div class="md:flex grid grid-cols-1 gap-6 justify-between items-center gap-32 py-16 md:py-20">
+        <div class="max-w-6xl px-4 sm:px-6  mx-auto flex flex-col justify-between">
+            <div class="md:flex grid grid-cols-1 gap-6 justify-between items-center gap-32 py-10">
                 <div class=" max-w-xl title text-4xl">
                     <div class="mb-3 max-lg:text-3xl">
                         Hallo, I'm Hermawan
@@ -490,8 +489,6 @@
             </div>
         </div>
     </div>
-
-
     <!-- Footer -->
     <div
         class=" bg-gradient-to-t from-white mx-auto w-full ">
@@ -513,7 +510,6 @@ Instagram
         </a>
         </div>
     </div>
-
     <!-- Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/preline@2.5.0/dist/preline.min.js"></script>
