--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <!-- Slider HTML -->
         <div class="relative w-full p-4 overflow-hidden ">
             <div class="swiper-container">
-                <div class="swiper-wrapper">
+                <div class="swiper-wrapper items-center">
                     <!-- Slide 2 -->
                     
                     <!-- Slide 1 -->
