--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Ngeyogja</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Ngeyogja</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span></div> —
                                 2024
                             </div>
@@ -163,8 +163,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Selma</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Selma</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">graduation</span></div> —
                                 2024
                             </div>
@@ -187,8 +187,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Ratri Wedding</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Ratri Wedding</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span></div> — 2024
                             </div>
 
@@ -210,8 +210,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Dema</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Dema</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">prewedding</span></div> —
                                 2024
                             </div>
@@ -233,8 +233,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Madflash</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Madflash</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span></div> — 2025
                             </div>
 
@@ -258,8 +258,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Ero</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Ero</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span></div> — 2022
                             </div>
 
@@ -280,8 +280,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">AAU</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">AAU</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span></div> — 2024
                             </div>
 
@@ -301,8 +301,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">KAI Night Run</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">KAI Night Run</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">video</span></div> — 2024
                             </div>
 
@@ -322,8 +322,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Blog Concept</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Blog Concept</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">design</span></div> —
                                 2025
                             </div>
@@ -344,8 +344,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Amatic</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Amatic</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">commerce template</span>
                                 </div> — 2020
                             </div>
@@ -365,8 +365,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Healthy</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Healthy</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">concept</span></div> —
                                 2020
                             </div>
@@ -386,8 +386,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Unhas</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Unhas</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span></div> —
                                 2021
                             </div>
@@ -407,8 +407,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">IDwebhosts</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">IDwebhosts</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span></div> —
                                 2020
                             </div>
@@ -428,8 +428,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Naturevaganza</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Naturevaganza</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span></div> —
                                 2023
                             </div>
@@ -449,8 +449,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Order</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Order</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">system</span></div> —
                                 2025
                             </div>
@@ -470,8 +470,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Arki</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Arki</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">template</span></div> —
                                 2019
                             </div>
@@ -491,8 +491,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Wunik</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Wunik</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">website</span></div> —
                                 2020
                             </div>
@@ -512,8 +512,8 @@
                                         fill="white" stroke="white" stroke-width="0.542084"></path>
                                 </svg>
                             </div>
-                            <div class="flex gap-4 items-center justify-center mt-4">
-                                <div class="flex gap-2"><span class="font-bold">Admin</span><span
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Admin</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500">system</span></div> —
                                 2024
                             </div>
@@ -626,7 +626,7 @@
 
     </script>
     <script>
-        const textArray = ["Web Designer", "UI/UX Designer", "Frontend Developer", "Photographer", "Videographer", "Video Editor"];
+        const textArray = ["Web Designer     ", "UI/UX Designer     ", "Frontend Developer     ", "Photographer     ", "Videographer    ", "Video Editor    "];
         let currentIndex = 0;
         let currentText = "";
         let isDeleting = false;
