--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     </div>
       
       <div id="hs-full-screen-modal" class="hs-overlay hidden size-full fixed  start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-full-screen-label">
-        <div class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-10 opacity-0 transition-all max-w-full max-h-full h-full">
+        <div class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m opacity-0 transition-all max-w-full max-h-full h-full">
           <div class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
             <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
                 <div class="flex gap-4 items-center">
@@ -552,7 +552,7 @@
                             <p>I also find beauty in design through other media. Photography and videography are both my hobbies and side business at <a href="http://tanggastudio.com">@tanggastudio</a>.</p>
                             
                             <p>I've come to consider Jogja my home, even though I was born in the city of lumpia.</p>
-                            <img src="img/IMG_3422.jpg" alt="wawanzone" class="max-w-xs mx-auto rounded-xl">
+                            <img src="img/IMG_3422.jpg" alt="wawanzone" class="max-w-xs mx-auto rounded-xl max-h-[320px]">
                     </div>
                 </div>
             </div>
