--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
         </div>
     </div>
       
-      <div id="hs-full-screen-modal" class="hs-overlay hidden size-full fixed  start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-full-screen-label">
+      <div id="hs-full-screen-modal" class="hs-overlay hidden size-full absolute top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-full-screen-label">
         <div class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m opacity-0 transition-all max-w-full max-h-full h-full">
           <div class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
             <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
