--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                   </svg>
                 </button>
               </div>
-            <div class="max-w-6xl text-white px-4 sm:px-6  mx-auto flex flex-col justify-between">
+            <div class="max-w-6xl text-white px-4 sm:px-6  mx-auto flex flex-col justify-between h-[calc(100vh-70px)] overflow-y-auto overflow-x-hidden">
                 
                 <div class="md:flex grid grid-cols-1 gap-6 justify-between items-center gap-32 py-10">
                     <div class="  desc prose  ">
