--- a/index.html
+++ b/index.html
@@ -637,8 +637,11 @@
                 <div
                     class="max-w-6xl text-white px-4 sm:px-6  mx-auto flex flex-col justify-between h-[calc(100vh-70px)] w-full   overflow-y-auto overflow-x-hidden">
 
+
+
+
                     <div class="flex flex-col items-center justify-center w-full p-5 ">
-                        <!-- Drop Zone untuk Upload -->
+                        <!-- Drop Zone for File Upload -->
                         <div id="drop-zone"
                             class="w-full p-10 border-2 border-dashed border-gray-300 rounded-lg min-h-[50vh] items-center flex flex-col justify-center text-center bg-white hover:bg-gray-50">
                             <p class="text-gray-600">Drag and drop img here or</p>
@@ -647,12 +650,12 @@
                                 <input type="file" id="upload-image" accept="image/*" class="hidden" />
                             </label>
                             <!-- Loader -->
-                            <div id="loader" class="hidden my-5 text-center">
-                                <div class="animate-spin rounded-full h-10 w-10 border-t-4 border-blue-500 mx-auto">
-                                </div>
+                            <div id="loader" class="hidden flex items-center justify-center mt-5">
+                                <div class="animate-spin rounded-full h-10 w-10 border-t-4 border-blue-500"></div>
+                                <p class="ml-3 text-gray-600">Memproses...</p>
                             </div>
 
-                            <!-- Hasil dan Tombol Download -->
+                            <!-- Result and Download Button -->
                             <div class="mt-5 text-center">
                                 <img id="result-image" alt="Hasil tanpa background" class="max-w-xs rounded " />
                                 <a id="download-button" href="#"
@@ -660,9 +663,8 @@
                                     Hasil</a>
                             </div>
                         </div>
-
-
                     </div>
+
 
                 </div>
             </div>
@@ -769,62 +771,66 @@
         type(); // Memulai efek mengetik
     </script>
     <script>
-        // API Key Remove.bg
-        const apiKey = 'FaBb5Fq14HXXL7JifN5DhrZw';
-
-        // Fungsi untuk menghapus background gambar
         async function removeBackground(imageFile) {
             const formData = new FormData();
-            formData.append('image_file', imageFile);
-            formData.append('size', 'auto');
+            formData.append('file', imageFile); // Ensure this matches the API's requirements
 
-            // Tampilkan animasi loading
+            const requestOptions = {
+                method: 'POST',
+                body: formData
+            };
+
             const loader = document.getElementById('loader');
             loader.classList.remove('hidden');
 
             try {
-                const response = await fetch('https://api.remove.bg/v1.0/removebg', {
-                    method: 'POST',
-                    headers: {
-                        'X-Api-Key': apiKey
-                    },
-                    body: formData
-                });
+                const response = await fetch("https://api.zpi.my.id/v1/utility/bg-remover/image", requestOptions);
 
                 if (!response.ok) {
-                    throw new Error(`Error: ${response.statusText}`);
+                    const errorText = await response.text();
+                    throw new Error(`HTTP Error: ${response.status}, Detail: ${errorText}`);
                 }
 
-                const blob = await response.blob();
-                const imageUrl = URL.createObjectURL(blob);
+                const data = await response.json();
+                console.log("API Response:", data); // Log the API response to inspect it
 
-                // Tampilkan hasil gambar tanpa background
-                const resultImg = document.getElementById('result-image');
+                // Check if the API response has the expected data
+                if (data.status !== 200 || !data.data || !data.data.bg_removed) {
+                    throw new Error("Unexpected API response structure.");
+                }
+
+                // Get the background-removed image URL
+                const imageUrl = data.data.bg_removed;
+
+                // Update the result image and download button
+                const resultImg = document.getElementById("result-image");
                 resultImg.src = imageUrl;
 
-                // Aktifkan tombol download
-                const downloadButton = document.getElementById('download-button');
+                const downloadButton = document.getElementById("download-button");
                 downloadButton.href = imageUrl;
-                downloadButton.download = 'image-no-bg.png';
-                downloadButton.classList.remove('hidden');
+                downloadButton.download = "image-no-bg.png";
+                downloadButton.classList.remove("hidden");
+
             } catch (error) {
-                console.error('Failed to remove background:', error);
+                console.error("An error occurred:", error);
+                alert(`An error occurred: ${error.message}`);
             } finally {
-                // Sembunyikan animasi loading
                 loader.classList.add('hidden');
             }
         }
 
-        // Event listener untuk drag and drop
+        // Event listener for dragover
         document.getElementById('drop-zone').addEventListener('dragover', (event) => {
             event.preventDefault();
             event.currentTarget.classList.add('border-blue-500');
         });
 
+        // Event listener for dragleave
         document.getElementById('drop-zone').addEventListener('dragleave', (event) => {
             event.currentTarget.classList.remove('border-blue-500');
         });
 
+        // Event listener for drop event
         document.getElementById('drop-zone').addEventListener('drop', (event) => {
             event.preventDefault();
             event.currentTarget.classList.remove('border-blue-500');
@@ -834,17 +840,14 @@
             }
         });
 
-        // Event listener untuk input file
+        // Event listener for file input change
         document.getElementById('upload-image').addEventListener('change', (event) => {
             const imageFile = event.target.files[0];
             if (imageFile) {
                 removeBackground(imageFile);
             }
         });
-
-
     </script>
-
     <style>
         .bg-grid {
             background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(15 23 42 / 0.04)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
