--- a/index.html
+++ b/index.html
@@ -652,12 +652,11 @@
                             <!-- Loader -->
                             <div id="loader" class="hidden flex items-center justify-center mt-5">
                                 <div class="animate-spin rounded-full h-10 w-10 border-t-4 border-blue-500"></div>
-                                <p class="ml-3 text-gray-600">Memproses...</p>
                             </div>
 
                             <!-- Result and Download Button -->
-                            <div class="mt-5 text-center">
-                                <img id="result-image" alt="Hasil tanpa background" class="max-w-xs rounded " />
+                            <div class="text-center">
+                                <img id="result-image" alt="Hasil tanpa background" class="max-w-xs rounded mb-10 " />
                                 <a id="download-button" href="#"
                                     class="hidden mt-3 px-4 py-2 bg-green-500 text-white rounded-md hover:bg-green-600">Download
                                     Hasil</a>
