--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                                 </svg>
                             </div>
                             <div class="flex gap-4 items-start justify-center mt-4 text-sm">
-                                <div class="flex flex-col"><span class="font-bold">Laily</span><span
+                                <div class="flex flex-col"><span class="font-bold">Shafa</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
                                 </div> —
                                 2024
