--- a/index.html
+++ b/index.html
@@ -260,7 +260,72 @@
 
                         </a>
                     </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://drive.google.com/file/d/1dBmZwUu9ltVJdOaQtHs5cD1peDSIcojg/view?usp=sharing" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/amikom.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Amikom</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
+                            </div>
 
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://drive.google.com/file/d/1l0gKG5JXGp6iBDVLnNQ06gJEMBnog4QU/view?usp=sharing" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/gobar.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">PLN Nusantara</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://drive.google.com/file/d/1_rxQnik_S4XlJLx5iyUpPORG829yC5SQ/view?usp=sharing" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/ugm.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">UGM</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
                             href="https://www.instagram.com/p/C1laQM-vAdt/" target="_blank">
@@ -374,6 +439,72 @@
                                 <div class="flex flex-col"><span class="font-bold">KAI Night Run</span><span
                                         class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">video</span>
                                 </div> — 2024
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://www.instagram.com/p/C1skFzWS8ty/" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="https://cloud.tagbox.com/media/1726964/2138759/414748/18038150065632700/416842761_18404925718009332_4451811575792605411_n.jpg" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">Farah</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
+                                </div> —
+                                2023
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="#" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/uii.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">UII</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
+                            </div>
+
+                        </a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
+                            href="https://drive.google.com/file/d/1XguxxeVjeJm-LpPUkLoMgYMnO_k9azHY/view?usp=sharing" target="_blank">
+                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
+                                loading="lazy" width="357" height="305" src="img/umkm.webp" alt="">
+                            <div
+                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
+                                <svg width="14" height="14" viewBox="0 0 14 14">
+                                    <path
+                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
+                                        fill="white" stroke="white" stroke-width="0.542084"></path>
+                                </svg>
+                            </div>
+                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
+                                <div class="flex flex-col"><span class="font-bold">UMKM</span><span
+                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">company</span>
+                                </div> —
+                                2024
                             </div>
 
                         </a>
@@ -577,28 +708,7 @@
 
                         </a>
                     </div>
-                    <div class="swiper-slide">
-                        <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://www.instagram.com/p/C1skFzWS8ty/" target="_blank">
-                            <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
-                                loading="lazy" width="357" height="305" src="https://cloud.tagbox.com/media/1726964/2138759/414748/18038150065632700/416842761_18404925718009332_4451811575792605411_n.jpg" alt="">
-                            <div
-                                class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
-                                <svg width="14" height="14" viewBox="0 0 14 14">
-                                    <path
-                                        d="M10.8101 1.96222L0.726954 12.0453L1.66171 12.9801L11.7448 2.89698L11.9344 9.4447L13.208 9.07311L13.0134 2.35278C12.9877 1.46249 12.2434 0.718185 11.3531 0.692412L4.80762 0.502924L4.43487 1.77539L10.8101 1.96222Z"
-                                        fill="white" stroke="white" stroke-width="0.542084"></path>
-                                </svg>
-                            </div>
-                            <div class="flex gap-4 items-start justify-center mt-4 text-sm">
-                                <div class="flex flex-col"><span class="font-bold">Farah</span><span
-                                        class="font-['Playfair_Display'] italic font-bold text-blue-500 category hidden">foto</span>
-                                </div> —
-                                2023
-                            </div>
-
-                        </a>
-                    </div>
+                    
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
                             href="#" target="_blank">
