--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wawanzone Web Developer</title>
-    <meta name="description" content="Wawanzone Web Developer">
+    <meta name="description"
+        content="Wawanzone - Jasa pembuatan website profesional di Yogyakarta. Kami menyediakan layanan pengembangan website yang responsif, modern dan SEO-friendly untuk bisnis Anda. Hubungi kami untuk konsultasi gratis.">
     <meta name="keyword"
-        content="jasa foto, fotografer, fotografi, prewedding, prewed, nikah, nikahan, pernikahan, wedding, dokumentasi, acara, event, ultah, ulang tahun, ibu hamil, maternity, keluarga family, bayi, baby, anak, indoor, outdoor, photography, photo, photographer, produk">
+        content="jasa pembuatan website, web developer yogyakarta, jasa website profesional, pengembangan website, website bisnis, website company profile, website toko online, website responsif, web design">
     <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
     <link rel="shortcut icon" href="img/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
@@ -262,7 +263,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://drive.google.com/file/d/1dBmZwUu9ltVJdOaQtHs5cD1peDSIcojg/view?usp=sharing" target="_blank">
+                            href="https://drive.google.com/file/d/1dBmZwUu9ltVJdOaQtHs5cD1peDSIcojg/view?usp=sharing"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/amikom.webp" alt="">
                             <div
@@ -284,7 +286,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://drive.google.com/file/d/1l0gKG5JXGp6iBDVLnNQ06gJEMBnog4QU/view?usp=sharing" target="_blank">
+                            href="https://drive.google.com/file/d/1l0gKG5JXGp6iBDVLnNQ06gJEMBnog4QU/view?usp=sharing"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/gobar.webp" alt="">
                             <div
@@ -306,7 +309,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://drive.google.com/file/d/1_rxQnik_S4XlJLx5iyUpPORG829yC5SQ/view?usp=sharing" target="_blank">
+                            href="https://drive.google.com/file/d/1_rxQnik_S4XlJLx5iyUpPORG829yC5SQ/view?usp=sharing"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/ugm.webp" alt="">
                             <div
@@ -328,7 +332,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://drive.google.com/file/d/1_ePxLylB3SJu7r9e8jXqjTKI4XW_YyWi/view?usp=sharing" target="_blank">
+                            href="https://drive.google.com/file/d/1_ePxLylB3SJu7r9e8jXqjTKI4XW_YyWi/view?usp=sharing"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/jfw.webp" alt="">
                             <div
@@ -350,7 +355,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://www.youtube.com/watch?v=yVpSbkQcjQU&ab_channel=HermawanSantoso" target="_blank">
+                            href="https://www.youtube.com/watch?v=yVpSbkQcjQU&ab_channel=HermawanSantoso"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/travel.webp" alt="">
                             <div
@@ -491,7 +497,9 @@
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
                             href="https://www.instagram.com/p/C1skFzWS8ty/" target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
-                                loading="lazy" width="357" height="305" src="https://cloud.tagbox.com/media/1726964/2138759/414748/18038150065632700/416842761_18404925718009332_4451811575792605411_n.jpg" alt="">
+                                loading="lazy" width="357" height="305"
+                                src="https://cloud.tagbox.com/media/1726964/2138759/414748/18038150065632700/416842761_18404925718009332_4451811575792605411_n.jpg"
+                                alt="">
                             <div
                                 class="icon absolute opacity-0 group-hover:opacity-100 transition-all duration-500 ease-in-out group-hover:rotate-[360deg] scale-0 group-hover:scale-125 left-0 right-0 mx-auto -mt-8 size-16 rounded-full bg-blue-600 flex items-center justify-center">
                                 <svg width="14" height="14" viewBox="0 0 14 14">
@@ -533,7 +541,8 @@
                     </div>
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
-                            href="https://drive.google.com/file/d/1XguxxeVjeJm-LpPUkLoMgYMnO_k9azHY/view?usp=sharing" target="_blank">
+                            href="https://drive.google.com/file/d/1XguxxeVjeJm-LpPUkLoMgYMnO_k9azHY/view?usp=sharing"
+                            target="_blank">
                             <img class="min-h-[250px] max-h-[400px] rounded-xl object-bottom object-cover w-full group-hover:opacity-80 shadow-xl"
                                 loading="lazy" width="357" height="305" src="img/umkm.webp" alt="">
                             <div
@@ -752,7 +761,7 @@
 
                         </a>
                     </div>
-                    
+
                     <div class="swiper-slide">
                         <a class="group flex justify-center items-center flex-col focus:outline-none transition-all "
                             href="#" target="_blank">
@@ -1071,55 +1080,55 @@
     </script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-    const swiper = new Swiper(".swiper-container", {
-        slidesPerView: "auto",
-        loop: true,
-        spaceBetween: 20,
-    });
+            const swiper = new Swiper(".swiper-container", {
+                slidesPerView: "auto",
+                loop: true,
+                spaceBetween: 20,
+            });
 
-    const categories = new Set();
-    const allSlides = Array.from(document.querySelectorAll(".swiper-slide")); // Simpan semua slide asli
+            const categories = new Set();
+            const allSlides = Array.from(document.querySelectorAll(".swiper-slide")); // Simpan semua slide asli
 
-    document.querySelectorAll(".category").forEach((el) => {
-        categories.add(el.textContent.trim().toLowerCase());
-    });
+            document.querySelectorAll(".category").forEach((el) => {
+                categories.add(el.textContent.trim().toLowerCase());
+            });
 
-    const filterContainer = document.createElement("div");
-    filterContainer.className = "flex gap-2 mb-4 flex-wrap justify-center";
+            const filterContainer = document.createElement("div");
+            filterContainer.className = "flex gap-2 mb-4 flex-wrap justify-center";
 
-    const allButton = document.createElement("button");
-    allButton.textContent = "All";
-    allButton.className = "filter-btn text-black px-4 py-2 rounded-full underline decoration-sky-500 decoration-2";
-    allButton.dataset.filter = "all";
-    filterContainer.appendChild(allButton);
+            const allButton = document.createElement("button");
+            allButton.textContent = "All";
+            allButton.className = "filter-btn text-black px-4 py-2 rounded-full underline decoration-sky-500 decoration-2";
+            allButton.dataset.filter = "all";
+            filterContainer.appendChild(allButton);
 
-    categories.forEach((category) => {
-        const button = document.createElement("button");
-        button.textContent = category.charAt(0).toUpperCase() + category.slice(1);
-        button.className = "filter-btn text-black px-4 py-2 rounded-full";
-        button.dataset.filter = category;
-        filterContainer.appendChild(button);
-    });
+            categories.forEach((category) => {
+                const button = document.createElement("button");
+                button.textContent = category.charAt(0).toUpperCase() + category.slice(1);
+                button.className = "filter-btn text-black px-4 py-2 rounded-full";
+                button.dataset.filter = category;
+                filterContainer.appendChild(button);
+            });
 
-    document.querySelector(".swiper-container").insertAdjacentElement("beforebegin", filterContainer);
+            document.querySelector(".swiper-container").insertAdjacentElement("beforebegin", filterContainer);
 
-    document.querySelectorAll(".filter-btn").forEach((btn) => {
-        btn.addEventListener("click", function () {
-            document.querySelectorAll(".filter-btn").forEach((b) => b.classList.remove("underline", "decoration-sky-500", "decoration-2"));
-            this.classList.add("underline", "decoration-sky-500", "decoration-2");
+            document.querySelectorAll(".filter-btn").forEach((btn) => {
+                btn.addEventListener("click", function () {
+                    document.querySelectorAll(".filter-btn").forEach((b) => b.classList.remove("underline", "decoration-sky-500", "decoration-2"));
+                    this.classList.add("underline", "decoration-sky-500", "decoration-2");
 
-            const filter = this.dataset.filter;
-            swiper.removeAllSlides(); // Hapus semua slide dari Swiper
+                    const filter = this.dataset.filter;
+                    swiper.removeAllSlides(); // Hapus semua slide dari Swiper
 
-            const filteredSlides = filter === "all"
-                ? allSlides
-                : allSlides.filter(slide => slide.querySelector(".category").textContent.trim().toLowerCase() === filter);
+                    const filteredSlides = filter === "all"
+                        ? allSlides
+                        : allSlides.filter(slide => slide.querySelector(".category").textContent.trim().toLowerCase() === filter);
 
-            swiper.appendSlide(filteredSlides); // Tambahkan slide yang sesuai
-            swiper.update(); // Perbarui Swiper agar looping tetap berjalan
+                    swiper.appendSlide(filteredSlides); // Tambahkan slide yang sesuai
+                    swiper.update(); // Perbarui Swiper agar looping tetap berjalan
+                });
+            });
         });
-    });
-});
 
     </script>
     <style>
