--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
         content="Wawanzone - Jasa pembuatan website profesional di Yogyakarta. Kami menyediakan layanan pengembangan website yang responsif, modern dan SEO-friendly untuk bisnis Anda. Hubungi kami untuk konsultasi gratis.">
     <meta name="keyword"
         content="jasa pembuatan website, web developer yogyakarta, jasa website profesional, pengembangan website, website bisnis, website company profile, website toko online, website responsif, web design">
-    <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
-    <link rel="shortcut icon" href="img/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="img/site.webmanifest">
-</head>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Wawanzone Web Developer</title>
+        <meta name="description" content="Wawanzone Web Developer">
+        <meta name="keyword"
+            content="jasa foto, fotografer, fotografi, prewedding, prewed, nikah, nikahan, pernikahan, wedding, dokumentasi, acara, event, ultah, ulang tahun, ibu hamil, maternity, keluarga family, bayi, baby, anak, indoor, outdoor, photography, photo, photographer, produk">
+        <link rel="stylesheet" href="https://preline.co/assets/css/main.min.css?v=2.5.0">
+        <link rel="shortcut icon" href="img/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="img/site.webmanifest">
+    </head>
+
 
 <body
     class="antialiased bg-gradient-to-b from-slate-100 to-white/10 via-white/0 h-screen flex flex-col justify-between  ">
@@ -64,7 +73,19 @@
                 <div
                     class="overflow-hidden overflow-y-auto max-h-[75vh] [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300">
                     <div class="py-2 md:py-0 flex flex-col md:flex-row md:items-center md:justify-end gap-0.5 md:gap-1">
-
+                        <!-- <button
+                            class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-none focus:text-gray-500"
+                            aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-hoax-checker"
+                            data-hs-overlay="#hs-hoax-checker">
+                            <svg class="shrink-0 size-4 me-3 md:me-2 block md:hidden" xmlns="http://www.w3.org/2000/svg"
+                                width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
+                                <circle cx="12" cy="7" r="4" />
+                            </svg>
+                            Hoax Checker<span
+                                class="inline-flex items-center gap-x-1.5 mx-2 py-1 px-1 rounded text-xs font-medium bg-teal-100 text-teal-800">New</span>
+                        </button> -->
                         <button
                             class="p-2 flex items-center text-sm text-gray-800 hover:text-gray-500 focus:outline-none focus:text-gray-500"
                             aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-remove-bg"
@@ -75,7 +96,7 @@
                                 <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2" />
                                 <circle cx="12" cy="7" r="4" />
                             </svg>
-                            Remove Bg
+                            Remove Bg 
                         </button>
 
                         <button
@@ -901,6 +922,55 @@
         </div>
     </div>
 
+
+    <div id="hs-hoax-checker"
+        class="hs-overlay hidden size-full absolute top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none"
+        role="dialog" tabindex="-1" aria-labelledby="hs-full-screen-label">
+        <div
+            class="hs-overlay-open:mt-0 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 m opacity-0 transition-all max-w-full max-h-full h-full">
+            <div
+                class="flex flex-col bg-gradient-to-b from-white to-white/0 via-white/90 pointer-events-auto max-w-full max-h-full h-full">
+                <div class="flex max-w-6xl mx-auto w-full justify-between items-center py-3 px-6 border-b">
+                    <div class="flex gap-4 items-center">
+                        <a class=" font-semibold text-base text-black focus:outline-none focus:opacity-80 flex gap-4 items-center"
+                            href="#" aria-label="Brand"><img src="img/wawanzone.png" class="size-12" alt=""> Hoax
+                            Checker</a>
+
+                    </div>
+                    <button type="button"
+                        class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none "
+                        aria-label="Close" data-hs-overlay="#hs-hoax-checker">
+                        <span class="sr-only">Close</span>
+                        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 6 6 18"></path>
+                            <path d="m6 6 12 12"></path>
+                        </svg>
+                    </button>
+                </div>
+                <div
+                    class="max-w-6xl text-white px-4 sm:px-6 mt-8 mx-auto flex flex-col justify-between h-[calc(100vh-70px)] w-full   overflow-y-auto overflow-x-hidden">
+                    <div>
+                        <textarea id="inputText" class="w-full p-2 border-2 border-gray-400 rounded-lg text-black  focus:ring-blue-500"
+                        rows="5" placeholder="Masukkan teks untuk dicek..."></textarea>
+                    <button id="checkButton"
+                        class="mt-3 w-full bg-blue-600 text-white font-semibold p-2 rounded-lg hover:bg-blue-700">Cek
+                        Hoax</button>
+
+                    <!-- Loader -->
+                    <div id="loader" class="hidden flex items-center justify-center mt-5">
+                        <div class="animate-spin rounded-full h-10 w-10 border-t-4 border-blue-500"></div>
+                    </div>
+
+                    <div id="result" class="mt-4 p-2 text-white font-semibold text-center hidden"></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <div class=" bg-gradient-to-t from-white mx-auto w-full ">
         <div class=" max-w-6xl flex md:items-center justify-between md:gap-3 mx-auto px-4 sm:px-6  py-5">
@@ -935,11 +1005,11 @@
             spaceBetween: 30,    // Space between slides
             loop: true,         // Infinite loop
             autoplay: {
-                delay: 0,        // No delay for autoplay
+                delay: 3000,        // No delay for autoplay
                 disableOnInteraction: true, // Keep autoplay running even after user interacts
             },
-            speed: 4000,         // Speed of the continuous scroll (in ms)
-            loopAdditionalSlides: 3, // Clone additional slides to make a smooth loop effect
+            speed: 5000,         // Speed of the continuous scroll (in ms)
+            loopAdditionalSlides: 5, // Clone additional slides to make a smooth loop effect
             breakpoints: {
                 // Responsive design for smaller screens
                 1024: {
@@ -1078,6 +1148,44 @@
             }
         });
     </script>
+    <!-- <script>
+        document.getElementById("checkButton").addEventListener("click", async function () {
+            const text = document.getElementById("inputText").value;
+            if (!text) {
+                alert("Masukkan teks terlebih dahulu!");
+                return;
+            }
+
+            const loader = document.getElementById("loader");
+            const resultDiv = document.getElementById("result");
+            resultDiv.classList.add("hidden");
+            loader.classList.remove("hidden");
+
+            const headersList = { "Accept": "application/json" };
+            const requestOptions = { method: "GET", headers: headersList };
+            const apiUrl = `https://api.zpi.my.id/v1/ai/ai-detector?text=${encodeURIComponent(text)}`;
+
+            try {
+                const response = await fetch(apiUrl, requestOptions);
+                const data = await response.json();
+
+                resultDiv.classList.remove("hidden", "bg-green-600", "bg-red-600");
+
+                if (data.status === "hoax") {
+                    resultDiv.textContent = "Artikel ini terindikasi hoax.";
+                    resultDiv.classList.add("rounded","bg-red-600");
+                } else {
+                    resultDiv.textContent = "Artikel ini valid dan bukan hoax.";
+                    resultDiv.classList.add("rounded","bg-green-600");
+                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Terjadi kesalahan saat menghubungi API.");
+            } finally {
+                loader.classList.add("hidden");
+            }
+        });
+    </script> -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const swiper = new Swiper(".swiper-container", {
